objects/redwing__Training_Plan_Category__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Learning_Category__c</fullName>
        <label>Catalog</label>
        <referenceTo>redwing__Learning_Category__c</referenceTo>
        <relationshipLabel>Catalog Learning Plans</relationshipLabel>
        <relationshipName>Training_Plan_Categories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <label>Learning Plan</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only active Learning Plans can be added to a Catalog</errorMessage>
            <filterItems>
                <field>redwing__Training_Plan__c.redwing__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>NOTE: Only active Learning Plans can be added to a Catalog</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Learning Plan Catalogs</relationshipLabel>
        <relationshipName>Training_Plan_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Learning Plan Catalog</label>
    <nameField>
        <displayFormat>LPC-{0000000}</displayFormat>
        <label>Learning Plan Catalog ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>